[fix] on small screens

--- a/index.css
+++ b/index.css
@@ -21,6 +21,15 @@ p, h3{
     margin-bottom:15px;
 }
 
+@media only screen and (max-width: 640px){
+    #profile-pic > img{
+        display:block;
+        float:none;
+        margin:auto;
+        padding:0;
+    }
+}
+
 .slideshow-container {
     position: relative;
     background: #f1f1f1f1;
@@ -30,6 +39,7 @@ p, h3{
     margin-bottom:15px;
     padding: 30px;
     text-align: center;
+    overflow: scroll;
     height:90px;
 }
 
